# StarPU --- Runtime system for heterogeneous multicore architectures.
#
# Copyright (C) 2012-2014,2016-2018                      Inria
# Copyright (C) 2009-2020                                Université de Bordeaux
# Copyright (C) 2010-2020                                CNRS
#
# StarPU is free software; you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation; either version 2.1 of the License, or (at
# your option) any later version.
#
# StarPU is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#
# See the GNU Lesser General Public License in COPYING.LGPL for more details.
#

StarPU 1.4.0 (git revision xxxx)
==============================================
New features:
  * Fault tolerance support with starpu_task_ft_failed().
  * Add get_max_size method to data interfaces for applications using data with
    variable size to express their maximal potential size.
  * New offline tool to draw graph showing elapsed time between sent
    or received data and their use by tasks
  * Add 4D tensor data interface.
  * New sched_tasks.rec trace file which monitors task scheduling push/pop actions
  * New STARPU_MPI_MEM_THROTTLE environment variable to throttle mpi
    submission according to memory use.

Small changes:
  * Use the S4U interface of Simgrid instead of xbt and MSG.

StarPU 1.3.4 (git revision xxx)
==============================================

Small features:
  * New environment variables STARPU_BUS_STATS_FILE and
    STARPU_WORKER_STATS_FILE to specify files in which to display
    statistics about data transfers and workers.
  * Add starpu_bcsr_filter_vertical_block filtering function.
  * Add starpu_interface_copy2d, 3d, and 4d to easily request data copies from
    data interfaces.
  * Move optimized cuda 2d copy from interfaces to new