@@ -43,6 +43,7 @@ static void usage()
 	fprintf(stderr, "   -label-deps         add label on dependencies.\n");
 	fprintf(stderr, "   -memory-states      show detailed memory states of handles\n");
 	fprintf(stderr, "   -internal           show StarPU-internal tasks in DAG\n");
+	fprintf(stderr, "   -number-events      generate a file counting FxT events by type\n");
 	fprintf(stderr, "   -h, --help          display this help and exit\n");
 	fprintf(stderr, "   -v, --version       output version information and exit\n\n");
         fprintf(stderr, "Report bugs to <%s>.", PACKAGE_BUGREPORT);
@@ -86,6 +87,13 @@ static int parse_args(int argc, char **argv)
 		if (strcmp(argv[i], "-no-events") == 0)
 		{
 			options.no_events = 1;
+			reading_input_filenames = 0;
+			continue;
+		}
+
+		if (strcmp(argv[i], "-number-events") == 0)
+		{
+			options.number_events_path = "number_events.data";
 			reading_input_filenames = 0;
 			continue;
 		}
